name:                css-selectors
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/css-selectors#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu@gmail.com
copyright:           2019 Willem Van Onsem
category:            webdevelopment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Css.Selector
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/css-selectors
