name:                css-selectors
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/css-selectors#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu@gmail.com
copyright:           2019 Willem Van Onsem
category:            webdevelopment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Css.Selector
    , Css.Selector.Core
    , Css.Selector.Lexer
    , Css.Selector.Parser
    , Css.Selector.QuasiQuoters
  build-depends:
      base >=4.7 && <5
    , array >=0.5.3.0 && <0.5.4.0
    , blaze-markup >=0.8 && <0.9
    , Decimal >=0.5.1 && <0.5.2
    , QuickCheck >=2.13 && <2.14
    , template-haskell >=2.14.0 && <2.16.0
    , text >=1.1 && <1.3
  build-tools:
      alex
    , happy
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/css-selectors
