name:                css-selectors
version:             0.1.1.0
synopsis:            Parsing, rendering and manipulating css selectors in Haskell.
-- description:
homepage:            https://github.com/KommuSoft/css-selectors#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2019 Willem Van Onsem
category:            webdevelopment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Css.Selector
    , Css.Selector.Core
    , Css.Selector.QuasiQuoters
    , Css.Selector.Utils
  other-modules:
       Css.Selector.Lexer
     , Css.Selector.Parser
  build-depends:
      base >=4.7 && <5
    , aeson >=1.0 && <2
    , array >=0.5.3.0 && <0.5.4.0
    , blaze-markup >=0.8 && <0.9
    , data-default >=0.7 && <0.8
    , Decimal >=0.5.1 && <0.5.2
    , QuickCheck >=2.13 && <2.14
    , template-haskell >=2.14.0 && <2.16.0
    , shakespeare >=2.0 && <3.0
    , text >=1.1 && <1.3
  build-tools:
      alex
    , happy
  default-language:    Haskell2010

test-suite css-selectors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , css-selectors
    , text
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/css-selectors
